# velvet

./: .gitignore  CMakeLists.txt  README.md  velvet
src/: CMakeLists.txt  application.cpp  application.h  definitions.cpp  definitions.h  geometry.h  menu.h  velvet.h  window.cpp  window.h
src/macOS/: CMakeLists.txt  application.mm  application_delegate.h  application_delegate.mm  mac_window.h  menu.mm  web_view_controller.h  web_view_controller.mm  window.mm  window_delegate.h  window_delegate.mm
src/resource/: resource.h
